; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-profile.c_tree_gen_interval_profiler.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-profile.c_tree_gen_interval_profiler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__, %struct.TYPE_7__ }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_7__ = type { i32 }

@integer_type_node = common dso_local global i32 0, align 4
@unsigned_type_node = common dso_local global i32 0, align 4
@current_function_decl = common dso_local global i32 0, align 4
@NULL_TREE = common dso_local global i32 0, align 4
@tree_interval_profiler_fn = common dso_local global i32 0, align 4
@BSI_SAME_STMT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, i32, i32)* @tree_gen_interval_profiler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tree_gen_interval_profiler(%struct.TYPE_10__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_10__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %16 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @bsi_for_stmt(i32 %20)
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @tree_coverage_counter_ref(i32 %22, i32 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* @integer_type_node, align 4
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @build_int_cst_type(i32 %25, i32 %30)
  store i32 %31, i32* %14, align 4
  %32 = load i32, i32* @unsigned_type_node, align 4
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @build_int_cst_type(i32 %32, i32 %37)
  store i32 %38, i32* %15, align 4
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* @current_function_decl, align 4
  %41 = call i32 @build_addr(i32 %39, i32 %40)
  %42 = load i32, i32* @NULL_TREE, align 4
  %43 = call i32 @force_gimple_operand_bsi(i32* %8, i32 %41, i32 1, i32 %42)
  store i32 %43, i32* %10, align 4
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %45 = call i32 @prepare_instrumented_value(i32* %8, %struct.TYPE_10__* %44)
  store i32 %45, i32* %13, align 4
  %46 = load i32, i32* @NULL_TREE, align 4
  %47 = load i32, i32* %10, align 4
  %48 = load i32, i32* @NULL_TREE, align 4
  %49 = load i32, i32* %13, align 4
  %50 = load i32, i32* @NULL_TREE, align 4
  %51 = load i32, i32* %14, align 4
  %52 = load i32, i32* @NULL_TREE, align 4
  %53 = load i32, i32* %15, align 4
  %54 = load i32, i32* @NULL_TREE, align 4
  %55 = call i32 @tree_cons(i32 %52, i32 %53, i32 %54)
  %56 = call i32 @tree_cons(i32 %50, i32 %51, i32 %55)
  %57 = call i32 @tree_cons(i32 %48, i32 %49, i32 %56)
  %58 = call i32 @tree_cons(i32 %46, i32 %47, i32 %57)
  store i32 %58, i32* %11, align 4
  %59 = load i32, i32* @tree_interval_profiler_fn, align 4
  %60 = load i32, i32* %11, align 4
  %61 = call i32 @build_function_call_expr(i32 %59, i32 %60)
  store i32 %61, i32* %12, align 4
  %62 = load i32, i32* %12, align 4
  %63 = load i32, i32* @BSI_SAME_STMT, align 4
  %64 = call i32 @bsi_insert_before(i32* %8, i32 %62, i32 %63)
  ret void
}

declare dso_local i32 @bsi_for_stmt(i32) #1

declare dso_local i32 @tree_coverage_counter_ref(i32, i32) #1

declare dso_local i32 @build_int_cst_type(i32, i32) #1

declare dso_local i32 @force_gimple_operand_bsi(i32*, i32, i32, i32) #1

declare dso_local i32 @build_addr(i32, i32) #1

declare dso_local i32 @prepare_instrumented_value(i32*, %struct.TYPE_10__*) #1

declare dso_local i32 @tree_cons(i32, i32, i32) #1

declare dso_local i32 @build_function_call_expr(i32, i32) #1

declare dso_local i32 @bsi_insert_before(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
